update cnpm, ltmang, testcurl

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@
 /TestCurl/build/
 /iqair/nbproject/private/
 /iqair/build/
+/phat_ltmang/nbproject/private/
+/phat_ltmang/build/
+/JavaApplication15/nbproject/private/
