--- a/phat_ltmang/nbproject/project.properties
+++ b/phat_ltmang/nbproject/project.properties
@@ -24,17 +24,16 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaApplication1.jar
+dist.jar=${dist.dir}/phat_ltmang.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.org.json.jar=..\\org.json.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.org.json.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -55,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=chat
+main.class=GUI_Server.UserConnectDatabase
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
