update source for ltmang

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@
 /phat_ltmang/nbproject/private/
 /phat_ltmang/build/
 /JavaApplication15/nbproject/private/
+/TestKeyGenRSA/nbproject/private/
+/TestKeyGenRSA/build/
