Update all ltmang project

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,20 @@
 /JavaApplication15/nbproject/private/
 /TestKeyGenRSA/nbproject/private/
 /TestKeyGenRSA/build/
+/ip-api/build/
+/ip-api/nbproject/private/
+/weather/build/
+/weather/nbproject/private/
+/LTMang/phat_ltmang/build/
+/LTMang/phat_ltmang/nbproject/private/
+/LTMang/weather/build/
+/LTMang/weather/nbproject/private/
+/LTMang/ip-api/build/
+/LTMang/ip-api/nbproject/private/
+/LTMang/JavaApplication1/build/
+/LTMang/JavaApplication1/nbproject/private/
+/LTMang/TestCurl/build/
+/LTMang/TestCurl/nbproject/private/
+/LTMang/TestKeyGenRSA/build/
+/LTMang/TestKeyGenRSA/nbproject/private/
+/LTMang/iqair/nbproject/private/
