update final ltmang

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@
 /HTTTDN/build/
 /HTTTDN/dist/
 /HTTTDN/nbproject/private/
+/LTMang/LTM_Server/nbproject/private/
+/LTMang/LTM_Client/nbproject/private/
+/LTMang/Test_Multithread/nbproject/private/
+/LTMang/Test_Multithread/build/
+/LTMang/LTM_Client/build/
+/LTMang/LTM_Server/build/
