--- a/LTMang/LTM_Client/nbproject/project.properties
+++ b/LTMang/LTM_Client/nbproject/project.properties
@@ -24,23 +24,22 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaApplication1.jar
+dist.jar=${dist.dir}/LTM_Client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.gson-2.8.2.jar=..\\..\\gson-2.8.2.jar
 file.reference.jsoup-1.13.1.jar=..\\..\\jsoup-1.13.1.jar
-file.reference.org.json.jar=..\\org.json.jar
-file.reference.org.json.jar-1=..\\..\\org.json.jar
+file.reference.org.json.jar=..\\..\\org.json.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.org.json.jar}:\
-    ${file.reference.org.json.jar-1}:\
     ${file.reference.gson-2.8.2.jar}:\
-    ${file.reference.jsoup-1.13.1.jar}
+    ${file.reference.jsoup-1.13.1.jar}:\
+    ${file.reference.org.json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -61,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=chat
+main.class=ltm_client.chat
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
