--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@
 /LTMang/Test_Multithread/build/
 /LTMang/LTM_Client/build/
 /LTMang/LTM_Server/build/
+/LTMang/TestBase64Encode/nbproject/private/
+/LTMang/TestBase64Encode/build/
